<resources>
    <string name="app_name">食在好評</string>
    <string name="textSettings">設定</string>
    <string name="textQuestion">問題回報</string>
    <string name="textInformation">資訊</string>
    <string name="textMap">附近</string>
    <string name="textHome">首頁</string>
    <string name="textCollection">收藏庫</string>
    <string name="textSearch">搜尋</string>
    <string name="textGift">禮物</string>
    <string name="textUserFriend">追蹤</string>
    <string name="textQRcode">QRcode</string>
    <string name="textIntroduction">簡介</string>

    <!-- member -->
        <!-- login-->
        <string name="textEngUserAccount">User Email</string>
        <string name="textEngPassword">Password</string>
        <string name="textForgetPassword">忘記密碼</string>
        <string name="textLoginTitle">Find Your Food</string>
        <!-- registered-->
        <string name="textEngConfirm">Confirm</string>
        <string name="textEngBirthday">Birthday</string>
        <string name="textEngGender">Gender</string>
        <string name="textEngNext">NEXT</string>


        <!-- other -->
        <string name="text_btSubmit">註冊</string>
        <string name="text_btLogin">登入</string>
        <string name="text_gender">性別</string>
        <string name="textUserAccount">帳號</string>
        <string name="textPassword">密碼</string>
        <string name="confirmPassword">確認密碼</string>
        <string name="textNickname">暱稱</string>
        <string name="textBirthday">生日</string>
        <string name="textMale">男性</string>
        <string name="textFemale">女性</string>
        <string name="textNotFind">找不到資料</string>
        <string name="textMemberLogin">會員登入</string>

    <!-- 預設會員資料 -->
    <string name="textDefaultAccount">userEmail@.gmail.com</string>
    <string name="textDefaultNickname">userNickname</string>
    <string name="textDefaultBirthday">1970–01-01</string>

    <!--評論-->
    <string name="text_insert_Comment">新增評論</string>
    <string name="text_store_info">店家資訊</string>
    <string name="text_store_name">店家名稱</string>
    <string name="text_store_address">店家地址</string>
    <string name="text_store_phone">店家電話</string>
    <string name="text_store_time">營業時間</string>
    <string name="text_Comment">評論</string>
    <string name="text_like">推薦</string>
    <string name="text_share">分享</string>
    <string name="text_coll">收藏</string>
    <string name="text_content">評論詳細資訊</string>

    <!-- setting -->
    <string name="textLogout">登出</string>
    <string name="settingDayNight">夜間模式</string>
    <string name="settingDaytime">日間模式</string>
    <string name="settingUserData">更改個人資料</string>
    <string name="textCleanCache">清除快取</string>
    <string name="textPreferencesSettings">喜好種類設定</string>
    <string name="textIKnow">我知道了</string>
    <string name="textGoTo">前往登入</string>


    <string name="textChineseStyle">中式美食</string>
    <string name="textWesternStyle">西式美食</string>
    <string name="textJapaneseStyle">日式美食</string>
    <string name="textKoreaStyle">韓式美食</string>
    <string name="textThaiStyle">泰式美食</string>
    <string name="textGuangdongStyle">港式美食</string>
    <string name="textLocalDishes">小吃美食</string>
    <string name="textIceCream">冰涼滋味</string>
    <string name="textDrinksDesserts">甜點飲品</string>
    <string name="textOther">其他美食</string>

    <string name="textSort">分類</string>
    <string name="textAddStore">分享店家</string>
    <string name="textMember">會員</string>
    <string name="textGuests">訪客</string>
    <string name="textServer">系統</string>

    <!--Map-->
    <string name="text_warm">No GPS or WIFI</string>


    <string name="text_btYes">確定</string>
    <string name="text_btCancel">取消</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="msg_NoCameraAppsFound">找不到相機應用程式</string>
    <string name="msg_ExternalStorageNotFound">External storage not found</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="server_client_id">891658422538-g4lvl5m9a0qqfqdapkneljnni6eas3j5.apps.googleusercontent.com</string>
    <string name="map_transition_string">mapTransition</string>
    <string name="map_storeInfo_name">storeInfo_name</string>

</resources>
