<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Member.Member2Activity">

    <!--被點擊後將會跑出載入動畫，預設狀態為invisible(隱藏)-->
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/reg_spinKit"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#aa000000"
        android:padding="180dp"
        android:translationZ="50dp"
        android:visibility="invisible"
        app:SpinKit_Color="@color/colorWhite" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg_2">

            <TextView
                android:id="@+id/et_reg_Create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/textPreferencesSettings"
                android:textColor="@color/colorWhite"
                android:textSize="40sp" />

            <Button
                android:id="@+id/bt_reg_Like1"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@+id/et_reg_Create"
                android:layout_below="@+id/et_reg_Create"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textChineseStyle"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like2"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/bt_reg_Like1"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textWesternStyle"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like3"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like1"
                android:layout_below="@+id/bt_reg_Like2"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textJapaneseStyle"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like4"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like2"
                android:layout_alignTop="@+id/bt_reg_Like3"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textKoreaStyle"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like5"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like1"
                android:layout_below="@+id/bt_reg_Like4"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textThaiStyle"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like6"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like2"
                android:layout_alignTop="@+id/bt_reg_Like5"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textGuangdongStyle"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like7"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like1"
                android:layout_below="@+id/bt_reg_Like6"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textLocalDishes"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like8"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like2"
                android:layout_alignTop="@+id/bt_reg_Like7"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textIceCream"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like9"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like1"
                android:layout_below="@+id/bt_reg_Like8"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textDrinksDesserts"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Like10"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/bt_reg_Like2"
                android:layout_alignTop="@+id/bt_reg_Like9"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/textOther"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bt_reg_Confirm"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_below="@+id/bt_reg_Like10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="完成"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
