<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_drawerLayout"
    android:fitsSystemWindows="true"
    tools:context=".Main.MainActivity">

        <!-- Page Content -->


        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorBackground"
            android:orientation="vertical">
            <include
                android:id="@+id/mainToolbar"
                layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorWhite"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/main_user"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"
                    android:background="#ff6600"
                    android:paddingTop="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/user_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/textMember"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imgmap"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"
                    android:background="#3385ff"
                    android:paddingTop="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/map_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/textMap"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_collection"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:background="#009933"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/collection_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/text_coll"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imgfork"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:background="#cc0000"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/fork_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/textSort"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"/>

        </LinearLayout>





    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_options" >


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>