<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsDrawerLayout"
    android:fitsSystemWindows="true"
    tools:context=".Settings.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackground">

        <include
            android:id="@+id/settingsToolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="3dp"
            android:layout_below="@+id/settingsToolbar">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:id="@+id/userInformation"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorCardBackground"
                    android:padding="3dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="?attr/ivUserSetting"/>

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorText"
                        android:text="@string/settingUserData" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/settingsPreferences"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:background="?attr/colorCardBackground">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="?attr/ivSettingLikes"/>

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorText"
                        android:text="@string/settingPreferences" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/changeDayTimeOrNight"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:background="?attr/colorCardBackground">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="?attr/ivSettingDayNight"/>

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorText"
                        android:text="?attr/tvSettingDayNight" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/clearApplicationCache"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:background="?attr/colorCardBackground">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:src="?attr/ivSettingClean"/>

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorText"
                        android:layout_marginEnd="30dp"
                        android:text="@string/textCleanCache" />

                    <TextView
                        android:id="@+id/tvClearApplicationCache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorText"
                        android:text="" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:id="@+id/settingLogout"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:background="?attr/colorCardBackground">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/logout"/>

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorText"
                        android:text="@string/textLogout" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/settingsNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_options" />

</android.support.v4.widget.DrawerLayout>